added animation command to modal in todo controller

--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -1,5 +1,6 @@
 
-@import "../../node_modules/ionic/scss/ionic";
+// @import "../../node_modules/ionic/scss/ionic";
+@import "../vendor/ionic-v0.9.27/css/ionic";
 
 /*Components*/
 /*Atoms*/
